zeit.cms changes
================

1.32 (unreleased)
-----------------

- Site-Steuerung vor Dateiverwaltung (#6159).


1.31.2 (2009-08-31)
-------------------

- Bessere Fehlerbeschreibung, wenn Bildergruppen referenziert werden, die
  plötzlich keine Bildergruppen mehr sind (#6137).


1.31.1 (2009-08-31)
-------------------

- Metadaten von Bildern in den bearbeiteten Dokumenten gehen nicht mehr kaputt,
  wenn das Bild gelöscht wurde (#6132).


1.31 (2009-08-27)
-----------------

- Neues Feld »Banner-Id« (#6088).

- Neue Optionen »Content« und »Countings« (#6104).


1.30 (2009-08-26)
-----------------

- XML-RPC-Methode ``retract`` um veröffentlichte Inhalte zurückzuziehen
  (#6071).

- »Erstes Related als Box« versteckt (nur Vivi-Skin, #6076).

- Bilder innerhalb von Bildergruppen „erben“ die Metadaten der Bildergruppe,
  bis die Metadaten des Bildes bearbeitet wurden, bzw. das Bild eingecheckt
  wurde (#6073).

- Neue Optionen »Einklappbar« und »Minimalheader« (#6015).

- Neue Felder »Farbwelt« und »Sub-Typ« (#6070).

- Im Ressort-Baum wird die Homepage jetzt explizit angezeigt (#6072).

Technisches
+++++++++++

- Funktion zum Bestimmen der automatischen Veöffentlichungsfähigkeit eines
  Objekts (für #6057) extrahiert.

- Test-Hilfs-Methoden aus zeit.content.cp verschoben.

- `get_working_directory` kann zusätzliche Ersetzungen vornehmen (für #6045).

1.29 (2009-08-21)
-----------------

- Ressort-Baum hinzugefügt, von dem aus die Index-Seiten der Ressorts
  (CenterPages) direkt bearbeitet werden können (nur Vivi-Skin, #5548).

Technisches
+++++++++++

- MasterSlaveDropDown kommt mit verschiedenen Form-Prefixes klar (für #6016).

- Warnung bei parallelem Veröffentlichen wird korrekt ausgegeben (#6030).

1.28.4 (2009-08-19)
-------------------

- Related-Updater aktualisiert nur noch eine Ebene um »maximum recursion depth
  exceeded« zu verhindern (#6026).


1.28.3 (2009-08-18)
-------------------

- Kompatibilität zu Python 2.6


1.28.2 (2009-08-18)