@@ -33,15 +33,7 @@ We have not added any image, so no image is referenced:
       <title xsi:nil="true"/>
       <text xsi:nil="true"/>
       <description xsi:nil="true"/>
-      <byline xsi:nil="true"/>
-      <short>
-        <title xsi:nil="true"/>
-        <text xsi:nil="true"/>
-      </short>
-      <homepage>
-        <title xsi:nil="true"/>
-        <text xsi:nil="true"/>
-      </homepage>
+      <byline xsi:nil="true"/>...
       <references/>
     </block>
   </container>
